style(ui): ganti font default dari Space Grotesk ke Inter

--- a/resources/css/scss/_variables.scss
+++ b/resources/css/scss/_variables.scss
@@ -29,7 +29,7 @@
 	--primary08: rgba(var(--primary-rgb), 0.8);
 	--primary09: rgba(var(--primary-rgb), 0.9);
 	--primary005: rgba(var(--primary-rgb), 0.05);
-	--default-font-family: "Space Grotesk", sans-serif;
+	--default-font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	--default-font-weight: 400;
 	--default-text-color: #011a42;
 	--default-border: #e2e8ee;
