--- a/resources/css/scss/_variables.scss
+++ b/resources/css/scss/_variables.scss
@@ -1,88 +1,87 @@
-
 :root {
-	--body-bg-rgb: 248, 249, 253;
-	--primary-rgb: 152, 95, 253;
-	--secondary-rgb: 255, 73, 205;
-	--primary-rgb: 152, 95, 253;
-	--secondary-rgb: 255, 73, 205;
-	--warning-rgb: 253, 175, 34;
-	--info-rgb: 0, 201, 255;
-	--success-rgb: 50, 212, 132;
-	--danger-rgb: 255, 103, 87;
-	--light-rgb: 250, 248, 253;
-	--dark-rgb: 10, 10, 10;
-	--orange-rgb: 250, 129, 40;
-	--pink-rgb: 255, 105, 180;
-	--teal-rgb: 53, 181, 170;
-	--purple-rgb: 190, 43, 235;
-	--green-rgb: 0, 201, 167;
-	--default-body-bg-color: rgb(var(--body-bg-rgb));
-	--primary-color: rgb(var(--primary-rgb));
-	--primary-border: rgb(var(--primary-rgb));
-	--primary01: rgba(var(--primary-rgb), 0.1);
-	--primary02: rgba(var(--primary-rgb), 0.2);
-	--primary03: rgba(var(--primary-rgb), 0.3);
-	--primary04: rgba(var(--primary-rgb), 0.4);
-	--primary05: rgba(var(--primary-rgb), 0.5);
-	--primary06: rgba(var(--primary-rgb), 0.6);
-	--primary07: rgba(var(--primary-rgb), 0.7);
-	--primary08: rgba(var(--primary-rgb), 0.8);
-	--primary09: rgba(var(--primary-rgb), 0.9);
-	--primary005: rgba(var(--primary-rgb), 0.05);
-	--default-font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-	--default-font-weight: 400;
-	--default-text-color: #011a42;
-	--default-border: #e2e8ee;
-	--default-background: #f9f7fc;
-	--menu-bg: #fff;
-	--menu-prime-color: #302d36;
-	--menu-icon-color: #6c7e96;
-	--header-icon-color: #6c7e96;
-	--menu-border-color: #e2e8ee;
-	--header-bg: #fff;
-	--header-prime-color: #302d36;
-	--header-border-color: #e2e8ee;
-	--custom-white: #fff;
-	--custom-black: #000;
-	--bootstrap-card-border: #e2e8ee;
-	--list-hover-focus-bg: #f5f6f7;
-	--text-muted: #5d6576;
-	--input-border: #e2e8ee;
-	--form-control-bg: #ffffff;
-	--bs-link-color-rgb: #{var(--default-text-color)};
+  --body-bg-rgb: 248, 250, 252;
+  --primary-rgb: 99, 102, 241;
+  --secondary-rgb: 139, 92, 246;
+  --warning-rgb: 251, 146, 60;
+  --info-rgb: 14, 165, 233;
+  --success-rgb: 34, 197, 94;
+  --danger-rgb: 239, 68, 68;
+  --light-rgb: 248, 250, 252;
+  --dark-rgb: 15, 23, 42;
+  --orange-rgb: 251, 146, 60;
+  --pink-rgb: 236, 72, 153;
+  --teal-rgb: 20, 184, 166;
+  --purple-rgb: 139, 92, 246;
+  --green-rgb: 34, 197, 94;
+  --default-body-bg-color: rgb(var(--body-bg-rgb));
+  --primary-color: rgb(var(--primary-rgb));
+  --primary-border: rgb(var(--primary-rgb));
+  --primary01: rgba(var(--primary-rgb), 0.1);
+  --primary02: rgba(var(--primary-rgb), 0.2);
+  --primary03: rgba(var(--primary-rgb), 0.3);
+  --primary04: rgba(var(--primary-rgb), 0.4);
+  --primary05: rgba(var(--primary-rgb), 0.5);
+  --primary06: rgba(var(--primary-rgb), 0.6);
+  --primary07: rgba(var(--primary-rgb), 0.7);
+  --primary08: rgba(var(--primary-rgb), 0.8);
+  --primary09: rgba(var(--primary-rgb), 0.9);
+  --primary005: rgba(var(--primary-rgb), 0.05);
+  --default-font-family:
+    'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+    sans-serif;
+  --default-font-weight: 400;
+  --default-text-color: #011a42;
+  --default-border: #e2e8ee;
+  --default-background: #f9f7fc;
+  --menu-bg: #fff;
+  --menu-prime-color: #302d36;
+  --menu-icon-color: #6c7e96;
+  --header-icon-color: #6c7e96;
+  --menu-border-color: #e2e8ee;
+  --header-bg: #fff;
+  --header-prime-color: #302d36;
+  --header-border-color: #e2e8ee;
+  --custom-white: #fff;
+  --custom-black: #000;
+  --bootstrap-card-border: #e2e8ee;
+  --list-hover-focus-bg: #f5f6f7;
+  --text-muted: #5d6576;
+  --input-border: #e2e8ee;
+  --form-control-bg: #ffffff;
+  --bs-link-color-rgb: #{var(--default-text-color)};
 
-	/* Gray set */
-	--gray-1: #f9fafb;
-	--gray-2: #f2f4f5;
-	--gray-3: #e6eaeb;
-	--gray-4: #dbdfe1;
-	--gray-5: #949eb7;
-	--gray-6: #7987a1;
-	--gray-7: #4d5875;
-	--gray-8: #383853;
-	--gray-9: #323251;
+  /* Gray set */
+  --gray-1: #f9fafb;
+  --gray-2: #f2f4f5;
+  --gray-3: #e6eaeb;
+  --gray-4: #dbdfe1;
+  --gray-5: #949eb7;
+  --gray-6: #7987a1;
+  --gray-7: #4d5875;
+  --gray-8: #383853;
+  --gray-9: #323251;
 
-	/* White set */
-	--white-1: rgba(255, 255, 255, 0.1);
-	--white-2: rgba(255, 255, 255, 0.2);
-	--white-3: rgba(255, 255, 255, 0.3);
-	--white-4: rgba(255, 255, 255, 0.4);
-	--white-5: rgba(255, 255, 255, 0.5);
-	--white-6: rgba(255, 255, 255, 0.6);
-	--white-7: rgba(255, 255, 255, 0.7);
-	--white-8: rgba(255, 255, 255, 0.8);
-	--white-9: rgba(255, 255, 255, 0.9);
+  /* White set */
+  --white-1: rgba(255, 255, 255, 0.1);
+  --white-2: rgba(255, 255, 255, 0.2);
+  --white-3: rgba(255, 255, 255, 0.3);
+  --white-4: rgba(255, 255, 255, 0.4);
+  --white-5: rgba(255, 255, 255, 0.5);
+  --white-6: rgba(255, 255, 255, 0.6);
+  --white-7: rgba(255, 255, 255, 0.7);
+  --white-8: rgba(255, 255, 255, 0.8);
+  --white-9: rgba(255, 255, 255, 0.9);
 
-	/* Black set */
-	--black-1: rgba(0, 0, 0, 0.1);
-	--black-2: rgba(0, 0, 0, 0.2);
-	--black-3: rgba(0, 0, 0, 0.3);
-	--black-4: rgba(0, 0, 0, 0.4);
-	--black-5: rgba(0, 0, 0, 0.5);
-	--black-6: rgba(0, 0, 0, 0.6);
-	--black-7: rgba(0, 0, 0, 0.7);
-	--black-8: rgba(0, 0, 0, 0.8);
-	--black-9: rgba(0, 0, 0, 0.9);
+  /* Black set */
+  --black-1: rgba(0, 0, 0, 0.1);
+  --black-2: rgba(0, 0, 0, 0.2);
+  --black-3: rgba(0, 0, 0, 0.3);
+  --black-4: rgba(0, 0, 0, 0.4);
+  --black-5: rgba(0, 0, 0, 0.5);
+  --black-6: rgba(0, 0, 0, 0.6);
+  --black-7: rgba(0, 0, 0, 0.7);
+  --black-8: rgba(0, 0, 0, 0.8);
+  --black-9: rgba(0, 0, 0, 0.9);
 }
 
 /*Font Family*/
@@ -108,7 +107,7 @@ $default-border: var(--default-border);
 $default-radius: 0.3rem;
 
 /*Box Shadow*/
-$box-shadow: 0px .125rem .25rem rgba(0, 0, 0, 0.05);
+$box-shadow: 0px 0.125rem 0.25rem rgba(0, 0, 0, 0.05);
 
 /* Header Variables */
 $header-bg: var(--header-bg);
@@ -150,14 +149,14 @@ $pink: rgb(var(--pink-rgb));
 $purple: rgb(var(--purple-rgb));
 $teal: rgb(var(--teal-rgb));
 $green: rgb(var(--green-rgb));
-$red: #d03d46;
-$blue: #0082FF;
-$cyan: #00D1D1;
-$indigo: #4d5ddb;
+$red: #ef4444;
+$blue: #3b82f6;
+$cyan: #06b6d4;
+$indigo: #6366f1;
 $white: #fff;
-$gray: #8699A3;
-$black: #0d0913;
-$yellow: #fff621;
+$gray: #6b7280;
+$black: #111827;
+$yellow: #f59e0b;
 $text-muted: var(--text-muted);
 $bootstrap-card-border: var(--bootstrap-card-border);
 $list-hover-focus-bg: var(--list-hover-focus-bg);
@@ -166,26 +165,26 @@ $form-control-bg: var(--form-control-bg);
 
 /* social icons colors */
 $facebook: #316ff6;
-$twitter: #14171A;
+$twitter: #14171a;
 $github: #333;
-$google: #CF4E43;
-$youtube: #FF0000;
-$telegram: #2AABEE;
-$whatsapp: #25D366;
+$google: #cf4e43;
+$youtube: #ff0000;
+$telegram: #2aabee;
+$whatsapp: #25d366;
 
 /*gradient variables*/
 $primary-gradient: linear-gradient(to bottom right, $primary 0%, $secondary 100%);
-$secondary-gradient: linear-gradient(to bottom right, $secondary 0%, #7289FF 100%);
-$success-gradient: linear-gradient(to bottom right, $success 0%, #009CA4 100%);
-$warning-gradient: linear-gradient(to bottom right, $warning 0%, #9EA53C 100%);
-$pink-gradient: linear-gradient(to bottom right, $pink 0%, #FF6C81 100%);
-$teal-gradient: linear-gradient(to bottom right, $teal 0%, #3AE3C7 100%);
-$danger-gradient: linear-gradient(to bottom right, $danger 0%, #DE4980 100%);
-$info-gradient: linear-gradient(to bottom right, $info 0%, #4990E1 100%);
-$orange-gradient: linear-gradient(to bottom right, $orange 0%, #E5647E 100%);
-$purple-gradient: linear-gradient(to bottom right, $purple 0%, #0086FF 100%);
-$light-gradient: linear-gradient(to bottom right, $light 0%, #D7FCFF 100%);
-$dark-gradient: linear-gradient(to bottom right, $dark 0%, #16657A 100%);
+$secondary-gradient: linear-gradient(to bottom right, $secondary 0%, #7289ff 100%);
+$success-gradient: linear-gradient(to bottom right, $success 0%, #009ca4 100%);
+$warning-gradient: linear-gradient(to bottom right, $warning 0%, #9ea53c 100%);
+$pink-gradient: linear-gradient(to bottom right, $pink 0%, #ff6c81 100%);
+$teal-gradient: linear-gradient(to bottom right, $teal 0%, #3ae3c7 100%);
+$danger-gradient: linear-gradient(to bottom right, $danger 0%, #de4980 100%);
+$info-gradient: linear-gradient(to bottom right, $info 0%, #4990e1 100%);
+$orange-gradient: linear-gradient(to bottom right, $orange 0%, #e5647e 100%);
+$purple-gradient: linear-gradient(to bottom right, $purple 0%, #0086ff 100%);
+$light-gradient: linear-gradient(to bottom right, $light 0%, #d7fcff 100%);
+$dark-gradient: linear-gradient(to bottom right, $dark 0%, #16657a 100%);
 
 /*gray set*/
 $gray-1: var(--gray-1);
@@ -221,63 +220,63 @@ $black-8: var(--black-8);
 $black-9: var(--black-9);
 
 /* dark mode */
-[data-theme-mode="dark"] {
-	--body-bg-rgb: 22, 22, 35;
-	--body-bg-rgb2: 38, 38, 52;
-	--menu-bg: rgb(var(--body-bg-rgb));
-	--menu-border-color: rgba(255, 255, 255, 0.1);
-	--menu-prime-color: rgba(255, 255, 255, 0.7);
-	--menu-icon-color: rgba(255, 255, 255, 0.7);
-	--header-icon-color: rgba(255, 255, 255, 0.7);
-	--header-bg: rgb(var(--body-bg-rgb));
-	--header-prime-color: rgba(255, 255, 255, 0.4);
-	--header-border-color: rgba(255, 255, 255, 0.1);
-	--custom-white: rgb(var(--body-bg-rgb));
-	--custom-black: #fff;
-	--default-border: rgba(255, 255, 255, 0.1);
-	--default-text-color: rgba(255, 255, 255, 0.8);
-	--light-rgb: 38, 38, 52;
-	--dark-rgb: 240, 245, 248;
-	--bootstrap-card-border: rgba(255, 255, 255, 0.1);
-	--list-hover-focus-bg: rgba(255, 255, 255, 0.1);
-	--default-background: rgb(var(--body-bg-rgb2));
-	--default-body-bg-color: rgb(var(--body-bg-rgb2));
-	--text-muted: rgba(255, 255, 255, 0.5);
-	--input-border: rgba(255, 255, 255, 0.1);
-	--form-control-bg: rgb(var(--body-bg-rgb));
-	$box-shadow: 0px .125rem .25rem rgba(255, 255, 25, 0.05);
-	color-scheme: dark;
+[data-theme-mode='dark'] {
+  --body-bg-rgb: 22, 22, 35;
+  --body-bg-rgb2: 38, 38, 52;
+  --menu-bg: rgb(var(--body-bg-rgb));
+  --menu-border-color: rgba(255, 255, 255, 0.1);
+  --menu-prime-color: rgba(255, 255, 255, 0.7);
+  --menu-icon-color: rgba(255, 255, 255, 0.7);
+  --header-icon-color: rgba(255, 255, 255, 0.7);
+  --header-bg: rgb(var(--body-bg-rgb));
+  --header-prime-color: rgba(255, 255, 255, 0.4);
+  --header-border-color: rgba(255, 255, 255, 0.1);
+  --custom-white: rgb(var(--body-bg-rgb));
+  --custom-black: #fff;
+  --default-border: rgba(255, 255, 255, 0.1);
+  --default-text-color: rgba(255, 255, 255, 0.8);
+  --light-rgb: 38, 38, 52;
+  --dark-rgb: 240, 245, 248;
+  --bootstrap-card-border: rgba(255, 255, 255, 0.1);
+  --list-hover-focus-bg: rgba(255, 255, 255, 0.1);
+  --default-background: rgb(var(--body-bg-rgb2));
+  --default-body-bg-color: rgb(var(--body-bg-rgb2));
+  --text-muted: rgba(255, 255, 255, 0.5);
+  --input-border: rgba(255, 255, 255, 0.1);
+  --form-control-bg: rgb(var(--body-bg-rgb));
+  $box-shadow: 0px 0.125rem 0.25rem rgba(255, 255, 25, 0.05);
+  color-scheme: dark;
 
-	/* Gray Set */
-	--gray-1: #110f0f;
-	--gray-2: #17171c;
-	--gray-3: #393946;
-	--gray-4: #505062;
-	--gray-5: #73738c;
-	--gray-6: #8f8fa3;
-	--gray-7: #ababba;
-	--gray-8: #c7c7d1;
-	--gray-9: #e3e3e8;
+  /* Gray Set */
+  --gray-1: #110f0f;
+  --gray-2: #17171c;
+  --gray-3: #393946;
+  --gray-4: #505062;
+  --gray-5: #73738c;
+  --gray-6: #8f8fa3;
+  --gray-7: #ababba;
+  --gray-8: #c7c7d1;
+  --gray-9: #e3e3e8;
 
-	/* white set */
-	--white-1: rgba(0, 0, 0, 0.1);
-	--white-2: rgba(0, 0, 0, 0.2);
-	--white-3: rgba(0, 0, 0, 0.3);
-	--white-4: rgba(0, 0, 0, 0.4);
-	--white-5: rgba(0, 0, 0, 0.5);
-	--white-6: rgba(0, 0, 0, 0.6);
-	--white-7: rgba(0, 0, 0, 0.7);
-	--white-8: rgba(0, 0, 0, 0.8);
-	--white-9: rgba(0, 0, 0, 0.9);
+  /* white set */
+  --white-1: rgba(0, 0, 0, 0.1);
+  --white-2: rgba(0, 0, 0, 0.2);
+  --white-3: rgba(0, 0, 0, 0.3);
+  --white-4: rgba(0, 0, 0, 0.4);
+  --white-5: rgba(0, 0, 0, 0.5);
+  --white-6: rgba(0, 0, 0, 0.6);
+  --white-7: rgba(0, 0, 0, 0.7);
+  --white-8: rgba(0, 0, 0, 0.8);
+  --white-9: rgba(0, 0, 0, 0.9);
 
-	/* black set */
-	--black-1: rgba(255, 255, 255, 0.1);
-	--black-2: rgba(255, 255, 255, 0.2);
-	--black-3: rgba(255, 255, 255, 0.3);
-	--black-4: rgba(255, 255, 255, 0.4);
-	--black-5: rgba(255, 255, 255, 0.5);
-	--black-6: rgba(255, 255, 255, 0.6);
-	--black-7: rgba(255, 255, 255, 0.7);
-	--black-8: rgba(255, 255, 255, 0.8);
-	--black-9: rgba(255, 255, 255, 0.9);
+  /* black set */
+  --black-1: rgba(255, 255, 255, 0.1);
+  --black-2: rgba(255, 255, 255, 0.2);
+  --black-3: rgba(255, 255, 255, 0.3);
+  --black-4: rgba(255, 255, 255, 0.4);
+  --black-5: rgba(255, 255, 255, 0.5);
+  --black-6: rgba(255, 255, 255, 0.6);
+  --black-7: rgba(255, 255, 255, 0.7);
+  --black-8: rgba(255, 255, 255, 0.8);
+  --black-9: rgba(255, 255, 255, 0.9);
 }
