style(ui): perbaiki tampilan avatar agar sempurna melingkar

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -2,3 +2,6 @@
 
 @forward '../css/scss/styles.scss';
 
+// Import custom avatar styles for perfect circular avatars
+@import '../css/custom-avatar.css';
+
