--- a/resources/css/scss/menu-styles/_double_menu.scss
+++ b/resources/css/scss/menu-styles/_double_menu.scss
@@ -130,12 +130,14 @@
         }
         .app-sidebar .slide-menu.child1 .side-menu__item.active {
             background-color: variables.$primary !important;
+            box-shadow: 0 3px 10px rgba(67, 97, 238, 0.2), 0 1px 4px rgba(67, 97, 238, 0.15);
         }
         .app-sidebar .slide-menu.child1 > .slide.active > .side-menu__item.active {
             color: variables.$white !important;
         }
         .app-sidebar .slide-menu.child2 .side-menu__item.active, .app-sidebar .slide-menu.child3 .side-menu__item.active {
             background-color: transparent !important;
+            box-shadow: 0 2px 6px rgba(67, 97, 238, 0.12), 0 1px 2px rgba(67, 97, 238, 0.08);
         }
         .app-sidebar .slide-menu.child1 .side-menu__item.active, .app-sidebar .slide-menu.child2 .side-menu__item.active, .app-sidebar .slide-menu.child3 .side-menu__item.active {
             .side-menu-doublemenu__icon {
