--- a/resources/css/scss/menu-styles/_horizontal.scss
+++ b/resources/css/scss/menu-styles/_horizontal.scss
@@ -5,6 +5,7 @@
             .app-sidebar .side-menu__item{
                 &.active,&:hover {
                     background-color: transparent;
+                    box-shadow: 0 2px 8px rgba(67, 97, 238, 0.15), 0 1px 3px rgba(67, 97, 238, 0.1);
                 }
             }
         }
